--- a/index.html
+++ b/index.html
@@ -216,6 +216,17 @@
             </div>
         </a>
 
+        <!-- Venezuela -->
+        <a href="https://wold-marketplaces.github.io/Venezuela-Marketplaces/" class="market-card">
+            <div class="card-header">
+                <h2>Venezuela Market</h2>
+            </div>
+            <div class="card-content">
+                <p>Conecta con vendedores venezolanos y descubre nuestra diversidad de productos típicos. Desde tequeños y cacao premium hasta artesanías tradicionales que reflejan la calidez y creatividad de la cultura venezolana.</p>
+                <span class="card-link">Explorar Venezuela Market →</span>
+            </div>
+        </a>
+
         <!-- Chile -->
         <a href="#" class="market-card">
             <div class="card-header">
